# simple_game_in_c

./: .gitignore  CMakeLists.txt  README.md
src/: audio.c  audio.h  grid.c  grid.h  main.c  tetromino.c  tetromino.h  ui.c  ui.h
